Removing unnecessary dependencies from styles.scss and fixing popup bug on Safari

--- a/_sass/homepage/_events.scss
+++ b/_sass/homepage/_events.scss
@@ -41,13 +41,13 @@
 
   &__image {
 
-    &--event1 {
+    &--event {
       width: 250px;
       height: 250px;
       background-image: url('/assets/images/trails.jpg');
     }
   }
-}
+
   &--event {
   display: none;
   flex-basis: calc(50% - 20px);
